# technical-analysis-agent

./: app.py  main.py  pyproject.toml  requirements.txt  telegram_bot.py
src/: getchart.py  getnews.py  model.py
utils/: prompts.py
