[project]
name = "technicalanalysisagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "google-generativeai>=0.8.5",
    "pillow>=11.2.1",
    "pyshorteners>=1.0.1",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
    "requests>=2.32.3",
    "yfinance>=0.2.57",
]
